@@ -1,5 +1,6 @@
 package dev.JustRed23.abcm.parsing;
 
+import java.util.Arrays;
 import java.util.List;
 
 public final class ByteParser implements IParser<Byte> {
@@ -9,6 +10,6 @@ public final class ByteParser implements IParser<Byte> {
     }
 
     public List<Class<?>> canParse() {
-        return List.of(byte.class, Byte.class);
+        return Arrays.asList(byte.class, Byte.class);
     }
 }
