@@ -1,5 +1,6 @@
 package dev.JustRed23.abcm.parsing;
 
+import java.util.Arrays;
 import java.util.List;
 
 public final class FloatParser implements IParser<Float> {
@@ -9,6 +10,6 @@ public final class FloatParser implements IParser<Float> {
     }
 
     public List<Class<?>> canParse() {
-        return List.of(float.class, Float.class);
+        return Arrays.asList(float.class, Float.class);
     }
 }
