@@ -1,5 +1,6 @@
 package dev.JustRed23.abcm.parsing;
 
+import java.util.Arrays;
 import java.util.List;
 
 public final class ShortParser implements IParser<Short> {
@@ -9,6 +10,6 @@ public final class ShortParser implements IParser<Short> {
     }
 
     public List<Class<?>> canParse() {
-        return List.of(short.class, Short.class);
+        return Arrays.asList(short.class, Short.class);
     }
 }
